--- a/Translations/ru.po
+++ b/Translations/ru.po
@@ -503,7 +503,7 @@ msgid ""
 msgstr ""
 "Адская сложность\n"
 "Самые сильные и мощные существа подземного мира поджидают у ворот ада. "
-"Только самые опытные персонажи рискнут явится в этот мир."
+"Только самые опытные персонажи рискнут явиться в этот мир."
 
 #: Source/DiabloUI/selgame.cpp:228
 msgid ""
